--- a/src/main/resources/workoutJournal/LogWorkout.fxml
+++ b/src/main/resources/workoutJournal/LogWorkout.fxml
@@ -31,10 +31,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <DatePicker fx:id="date" layoutX="85.0" layoutY="109.0" prefHeight="47.0" prefWidth="231.0" promptText="Enter date">
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor></DatePicker>
+                  <DatePicker fx:id="date" layoutX="103.0" layoutY="150.0" prefHeight="48.0" prefWidth="206.0" promptText="Press to enter date ---&gt;" />
                </children>
             </Pane>
             <GridPane prefHeight="140.0" prefWidth="381.0" GridPane.rowIndex="1">
